# CulinaSync-de-

./: .coderabbit.yaml  .cursorrules  .deepsource.toml  .env.example  .eslintrc.cjs  .gitignore  .npmrc  404.html  AGENTS.md  AUDIT.md  App.tsx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  README_APP.md  ROADMAP.md  SECURITY.md  SUPPORT.md  budget.json  codecov.yml  eslint.config.js  index.html  index.tsx  instructions.md  lighthouserc.json  lighthouserc.mobile.json  lint-staged.config.mjs  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  types.ts  vercel.json  (+3 more)
.cursor/: index.mdc
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.notes/: meeting_notes.md
.storybook/: main.ts  preview.ts
components/: AboutPage.tsx  AiChef.tsx  BottomNav.tsx  CommandPalette.tsx  Header.tsx  Help.tsx  MealPlanner.tsx  PantryListItem.tsx  PantryManager.tsx  PlannedMealCard.tsx  ReadmePage.tsx  RecipeBook.tsx  RecipeCard.tsx  RecipeDetail.tsx  RecipeList.tsx  Settings.tsx  ShoppingList.tsx  TagInput.tsx  VoiceControlUI.tsx
contexts/: SettingsContext.tsx
coverage/: index.html  lcov.info
data/: PlannedMealCard.tsx  seedData.ts
docs/: ADR-DEXIE-AT-REST-ENCRYPTION.md  ARCHITECTURE.md  AUDIT-REMEDIATION-BACKLOG.md  AUDIT-REMEDIATION-PLAN.md  AUDIT-REPORT-2026-06.md  AUDIT-vNEXT-2026-06-03.md  (+27 more)
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+670 files in other folders)
